// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dynamic templates > Works with template items plus value items > Should show template item first when coming before values on lexical order 1`] = `
{
  "asset": {
    "id": "overviewItem3",
    "label": {
      "asset": {
        "id": "overviewItem3-label",
        "type": "text",
        "value": "1099-A",
      },
    },
    "type": "overviewItem",
    "values": [
      {
        "asset": {
          "id": "overviewItem3-year",
          "type": "text",
          "value": "Desciption of concept 1099 1",
        },
      },
      {
        "asset": {
          "id": "loverviewItem3-cy",
          "type": "text",
          "value": "4000",
        },
      },
    ],
  },
}
`;

exports[`dynamic templates > Works with template items plus value items > Should show template item last when coming after values on lexical order 1`] = `
{
  "asset": {
    "id": "overviewItem1",
    "label": {
      "asset": {
        "id": "overviewItem1-label",
        "type": "text",
        "value": "First Summary",
      },
    },
    "type": "overviewItem",
    "values": [
      {
        "asset": {
          "id": "overviewItem1-year",
          "type": "text",
          "value": "Desciption of year summary 1",
        },
      },
      {
        "asset": {
          "id": "loverviewItem1-cy",
          "type": "text",
          "value": "14000",
        },
      },
    ],
  },
}
`;

exports[`templates > works with nested templates 1`] = `
{
  "children": [
    {
      "path": [
        "values",
      ],
      "value": {
        "override": false,
        "parent": [Circular],
        "type": "multi-node",
        "values": [
          {
            "children": [
              {
                "path": [
                  "asset",
                ],
                "value": {
                  "children": [
                    {
                      "path": [
                        "values",
                      ],
                      "value": {
                        "override": false,
                        "parent": [Circular],
                        "type": "multi-node",
                        "values": [
                          {
                            "parent": [Circular],
                            "type": "value",
                            "value": {
                              "text": "{{foo.pets.0}} + {{foo.people.0}}",
                            },
                          },
                          {
                            "parent": [Circular],
                            "type": "value",
                            "value": {
                              "text": "{{foo.pets.0}} + {{foo.people.1}}",
                            },
                          },
                        ],
                      },
                    },
                  ],
                  "parent": [Circular],
                  "type": "asset",
                  "value": {
                    "id": "outer-collection-0",
                    "type": "collection",
                  },
                },
              },
            ],
            "parent": [Circular],
            "type": "value",
            "value": undefined,
          },
          {
            "children": [
              {
                "path": [
                  "asset",
                ],
                "value": {
                  "children": [
                    {
                      "path": [
                        "values",
                      ],
                      "value": {
                        "override": false,
                        "parent": [Circular],
                        "type": "multi-node",
                        "values": [
                          {
                            "parent": [Circular],
                            "type": "value",
                            "value": {
                              "text": "{{foo.pets.1}} + {{foo.people.0}}",
                            },
                          },
                          {
                            "parent": [Circular],
                            "type": "value",
                            "value": {
                              "text": "{{foo.pets.1}} + {{foo.people.1}}",
                            },
                          },
                        ],
                      },
                    },
                  ],
                  "parent": [Circular],
                  "type": "asset",
                  "value": {
                    "id": "outer-collection-1",
                    "type": "collection",
                  },
                },
              },
            ],
            "parent": [Circular],
            "type": "value",
            "value": undefined,
          },
          {
            "children": [
              {
                "path": [
                  "asset",
                ],
                "value": {
                  "children": [
                    {
                      "path": [
                        "values",
                      ],
                      "value": {
                        "override": false,
                        "parent": [Circular],
                        "type": "multi-node",
                        "values": [
                          {
                            "parent": [Circular],
                            "type": "value",
                            "value": {
                              "text": "{{foo.pets.2}} + {{foo.people.0}}",
                            },
                          },
                          {
                            "parent": [Circular],
                            "type": "value",
                            "value": {
                              "text": "{{foo.pets.2}} + {{foo.people.1}}",
                            },
                          },
                        ],
                      },
                    },
                  ],
                  "parent": [Circular],
                  "type": "asset",
                  "value": {
                    "id": "outer-collection-2",
                    "type": "collection",
                  },
                },
              },
            ],
            "parent": [Circular],
            "type": "value",
            "value": undefined,
          },
        ],
      },
    },
  ],
  "type": "value",
  "value": {
    "id": "foo",
    "type": "collection",
  },
}
`;

exports[`templates > works with simple ones 1`] = `
{
  "children": [
    {
      "path": [
        "values",
      ],
      "value": {
        "override": false,
        "parent": [Circular],
        "type": "multi-node",
        "values": [
          {
            "parent": [Circular],
            "type": "value",
            "value": {
              "value": "{{foo.bar.0}}",
            },
          },
          {
            "parent": [Circular],
            "type": "value",
            "value": {
              "value": "{{foo.bar.1}}",
            },
          },
          {
            "parent": [Circular],
            "type": "value",
            "value": {
              "value": "{{foo.bar.2}}",
            },
          },
        ],
      },
    },
  ],
  "type": "value",
  "value": {
    "id": "foo",
    "type": "collection",
  },
}
`;
